# bare-zig-addon-example

./: .gitignore  CMakeLists.txt  README.md  binding.c  build.zig  example.js  index.js  package.json  test.js
.github/workflows/: prebuild.yml  test.yml
include/: bare_zig_example.h
src/: c_api.zig  root.zig
